--- a/apps/docs/docs/intro.mdx
+++ b/apps/docs/docs/intro.mdx
@@ -6,7 +6,7 @@ GBGR 디자인 시스템 문서입니다.
 
 ## 빠른 시작
 
-대부분의 앱에서는 `@gbgr/css`를 import 해서 Reset + Tokens(CSS 변수)을 한 번에 적용하는 것을 권장합니다.
+대부분의 앱에서는 `@gbgr/css`를 import 해서 Tokens(CSS 변수)을 한 번에 적용하는 것을 권장합니다.
 
 ```bash
 pnpm add @gbgr/css
@@ -15,4 +15,3 @@ pnpm add @gbgr/css
 ```ts
 import "@gbgr/css"
 ```
-
